test large desktop devices causes issues in the places.html page with font size too small and coloured category boxes too small. Add extra media query break point at 1400px and style to increase font-size and category divs height.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -471,3 +471,17 @@ th, td {
         margin-right: 5%;
     }
 }
+
+/* for large screen size from 1400px wide and up */
+@media screen and (min-width: 1400px) {
+
+    body {
+        font-size: 2rem;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+
+    #places-types div {
+        height: 150px;
+
+}
